develop/wip: swagger doesn't work correctly
